[gd_scene load_steps=18 format=3 uid="uid://ci4h23rvdej3t"]

[ext_resource type="Script" path="res://scenes/advanced-options/GeometricOptions.gd" id="1_a1yj1"]
[ext_resource type="Texture2D" uid="uid://vceyw8jntod2" path="res://assets/gui/panels.png" id="2_30xsd"]
[ext_resource type="Texture2D" uid="uid://i6nt6wwqdq7s" path="res://assets/gui/result_buttons.png" id="3_5g22u"]
[ext_resource type="Texture2D" uid="uid://ci2mpewrmv3rv" path="res://assets/gui/close_button.png" id="4_ngukf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xa7ud"]
atlas = ExtResource("2_30xsd")
region = Rect2(18, 2, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd8lg"]
atlas = ExtResource("3_5g22u")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt3rn"]
atlas = ExtResource("3_5g22u")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v75dv"]
atlas = ExtResource("3_5g22u")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ep30"]
atlas = ExtResource("3_5g22u")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kjnu"]
atlas = ExtResource("3_5g22u")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6817m"]
atlas = ExtResource("3_5g22u")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skh3p"]
atlas = ExtResource("4_ngukf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrwi1"]
atlas = ExtResource("4_ngukf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v0vr"]
atlas = ExtResource("4_ngukf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_toxlq"]
atlas = ExtResource("3_5g22u")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgt1m"]
atlas = ExtResource("3_5g22u")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8a5p"]
atlas = ExtResource("3_5g22u")
region = Rect2(32, 256, 32, 32)

[node name="GeometricOptions" type="MarginContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -192.0
offset_right = 152.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_a1yj1")

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="Content"]
layout_mode = 2
texture = SubResource("AtlasTexture_xa7ud")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="Content"]
layout_mode = 2

[node name="AdvancedOptions" type="HBoxContainer" parent="Content/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Main" type="VBoxContainer" parent="Content/MarginContainer/AdvancedOptions"]
layout_mode = 2

[node name="TranslationBox" type="HBoxContainer" parent="Content/MarginContainer/AdvancedOptions/Main"]
layout_mode = 2

[node name="TranslationLabel" type="TextureRect" parent="Content/MarginContainer/AdvancedOptions/Main/TranslationBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_xd8lg")

[node name="TranslationX" type="LineEdit" parent="Content/MarginContainer/AdvancedOptions/Main/TranslationBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter translation in x-axis"
max_length = 5

[node name="TranslationY" type="LineEdit" parent="Content/MarginContainer/AdvancedOptions/Main/TranslationBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter translation in y-axis"
max_length = 5

[node name="ContractionBox" type="HBoxContainer" parent="Content/MarginContainer/AdvancedOptions/Main"]
layout_mode = 2

[node name="ContractionLabel" type="TextureRect" parent="Content/MarginContainer/AdvancedOptions/Main/ContractionBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_yt3rn")

[node name="ContractionX" type="LineEdit" parent="Content/MarginContainer/AdvancedOptions/Main/ContractionBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter distortion along x-axis"
max_length = 5

[node name="ContractionY" type="LineEdit" parent="Content/MarginContainer/AdvancedOptions/Main/ContractionBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter distortion along y-axis"
max_length = 5

[node name="RotationBox" type="HBoxContainer" parent="Content/MarginContainer/AdvancedOptions/Main"]
layout_mode = 2

[node name="RotationLabel" type="TextureRect" parent="Content/MarginContainer/AdvancedOptions/Main/RotationBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_v75dv")

[node name="Rotation" type="LineEdit" parent="Content/MarginContainer/AdvancedOptions/Main/RotationBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter rotation degree"
placeholder_text = "Â°"
max_length = 5

[node name="Mirror" type="TextureButton" parent="Content/MarginContainer/AdvancedOptions/Main/RotationBox"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "flip rectangle"
texture_normal = SubResource("AtlasTexture_5ep30")
texture_pressed = SubResource("AtlasTexture_0kjnu")
texture_hover = SubResource("AtlasTexture_6817m")

[node name="ElseBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="CloseButton" type="TextureButton" parent="ElseBox"]
layout_mode = 2
size_flags_horizontal = 9
tooltip_text = "close options"
texture_normal = SubResource("AtlasTexture_skh3p")
texture_pressed = SubResource("AtlasTexture_yrwi1")
texture_hover = SubResource("AtlasTexture_0v0vr")

[node name="MatrixButton" type="TextureButton" parent="ElseBox"]
layout_mode = 2
size_flags_horizontal = 11
tooltip_text = "swtich to matrix view"
texture_normal = SubResource("AtlasTexture_toxlq")
texture_pressed = SubResource("AtlasTexture_qgt1m")
texture_hover = SubResource("AtlasTexture_n8a5p")

[connection signal="text_submitted" from="Content/MarginContainer/AdvancedOptions/Main/TranslationBox/TranslationX" to="." method="_on_translation_x_text_submitted"]
[connection signal="text_submitted" from="Content/MarginContainer/AdvancedOptions/Main/TranslationBox/TranslationY" to="." method="_on_translation_y_text_submitted"]
[connection signal="text_submitted" from="Content/MarginContainer/AdvancedOptions/Main/ContractionBox/ContractionX" to="." method="_on_contraction_x_text_submitted"]
[connection signal="text_submitted" from="Content/MarginContainer/AdvancedOptions/Main/ContractionBox/ContractionY" to="." method="_on_contraction_y_text_submitted"]
[connection signal="text_submitted" from="Content/MarginContainer/AdvancedOptions/Main/RotationBox/Rotation" to="." method="_on_rotation_text_submitted"]
[connection signal="pressed" from="Content/MarginContainer/AdvancedOptions/Main/RotationBox/Mirror" to="." method="_on_mirror_pressed"]
[connection signal="pressed" from="ElseBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ElseBox/MatrixButton" to="." method="_on_matrix_button_pressed"]
